# WEB_HW7

./: README.md  alembic.ini  config.ini  crud.py  db.py  main.py  models.py  my_crud.py  my_script.py  my_select.py  my_selects.py  pyproject.toml  seed.py
alembic/versions/: d1ccba35481a_init.py
