[tool.poetry]
name = "hw7"
version = "0.1.0"
description = ""
authors = ["olga-ivanko <o.ivanko@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
